--- a/04.CicloAttivo_QuotetoInvoice/ShipmentCustomer/m_inout0045m_2020_2/lit_rep_m_inout_lot_multiple.jrxml
+++ b/04.CicloAttivo_QuotetoInvoice/ShipmentCustomer/m_inout0045m_2020_2/lit_rep_m_inout_lot_multiple.jrxml
@@ -18,6 +18,9 @@
 	<parameter name="AD_CLIENT_ID" class="java.lang.String"/>
 	<parameter name="AD_LANGUAGE" class="java.lang.String"/>
 	<parameter name="RESOURCE" class="java.lang.String"/>
+	<parameter name="SUBREPORT_DIR" class="java.lang.String">
+		<defaultValueExpression><![CDATA["./"]]></defaultValueExpression>
+	</parameter>
 	<queryString>
 		<![CDATA[SELECT *
 FROM lit_rep_m_inout_lot_multiple
